--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/ol-mapbox-style@6.1.4/dist/olms.js" type="text/javascript"></script>
     
-    <title>NJAPMS</title>
+    <title>AIDgis</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
